objects/market_data__c.object
<CustomObject>
    <fields>
        <fullName>account__c</fullName>
        <label>Hospital</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Market Data</relationshipLabel>
        <relationshipName>Market_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>crt_d__c</fullName>
        <description>Market data on prior year implant volume</description>
        <label>CRT-D</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>crt_t__c</fullName>
        <description>Market data on prior year implant volume</description>
        <label>CRT-P</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>icd__c</fullName>
        <description>Market data on prior year implant volume</description>
        <label>ICD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ilr__c</fullName>
        <description>Market data on prior year implant volume</description>
        <label>ILR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>metropolitan_statistical_area__c</fullName>
        <description>A geographical region defined by close economic ties throughout the area.</description>
        <label>Metropolitan Statistical Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pacemaker_dual_chamber__c</fullName>
        <description>Market data on prior year implant volume</description>
        <label>Pacemaker Dual Chamber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pacemaker_single_chamber__c</fullName>
        <description>Market data on prior year implant volume</description>
        <label>Pacemaker Single Chamber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>physician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Linkage to the physician</description>
        <label>Physician</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Physician</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Market Data</relationshipLabel>
        <relationshipName>Market_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>q_score__c</fullName>
        <label>Q-SCORE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>year__c</fullName>
        <description>Year the data was collected</description>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Market Data</label>
    <nameField>
        <displayFormat>MD-{000000}</displayFormat>
        <label>Market Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Data</pluralLabel>
    <recordTypes>
        <fullName>us_market_data</fullName>
        <active>true</active>
        <label>US Market Data</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>